--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,14 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# IntelliJ Files
+.idea
+*.ipr
+*.iml
+*.ids
+*.iws
+
+# Dotfiles Except gitignore
+.*
+!.gitignore
